--- a/deploy/example-qcow2.yaml
+++ b/deploy/example-qcow2.yaml
@@ -2,10 +2,10 @@
 apiVersion: storage.k8s.io/v1
 kind: StorageClass
 metadata:
-  name: centos-7.4.1708.qcow2
+  name: 35590e12-c947-4d44-bd13-db7845508e99          # SC，用来表示镜像 ID
 provisioner: driver.extrootfs.io
 volumeBindingMode: Immediate
-parameters:
+parameters:                                           # 具体镜像信息
   extrootfs.io/type: qcow2
   extrootfs.io/image: "centos-7.4.1708.qcow2"
 reclaimPolicy: Delete
@@ -14,14 +14,14 @@ allowVolumeExpansion: false
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
-  name: 9e848619-171d-488f-917e-2a2fa7f6a896
+  name: 9e848619-171d-488f-917e-2a2fa7f6a896              # PVC 和 PV 信息关联到具体的 rootfs
 spec:
   accessModes:
     - ReadWriteOnce
   resources:
     requests:
       storage: 20Gi
-  storageClassName: centos-7.4.1708.qcow2
+  storageClassName: 35590e12-c947-4d44-bd13-db7845508e99  # 关联镜像信息
 ---
 apiVersion: v1
 kind: Pod
@@ -33,7 +33,12 @@ spec:
       image: registry.lqingcloud.cn/library/centos:7.4.1708
       imagePullPolicy: IfNotPresent
       name: centos
-      volumeMounts:
+      env:
+      - name: EXTERNAL_ROOTFS_DRIVER
+        value: device
+      - name: EXTERNAL_ROOTFS_DEVICE_CONFIG
+        value: "/opt/extrootfs/output/9e848619-171d-488f-917e-2a2fa7f6a896"
+      volumeMounts:                                                                # 注入上述 PVC，用于触发容器启动前设备的挂载
       - name: extrootfs
         mountPath: /tmp/extrootfs
   volumes:
