--- a/deploy/charts/templates/daemon.yaml
+++ b/deploy/charts/templates/daemon.yaml
@@ -64,16 +64,13 @@ spec:
               mountPath: /dev
             - name: host-sys
               mountPath: /sys
-            - mountPath: /run/mount
-              name: host-mount
+            - mountPath: /run
+              name: host-run
             - mountPath: /lib/modules
               name: lib-modules
               readOnly: true
             - mountPath: /etc/iscsi
               name: iscsi-etc
-            - mountPath: /usr/sbin/iscsiadm
-              name: iscsiadm
-              readOnly: true
         - name: csi-provisioner
           image: {{ .Values.image.provisioner }}
           imagePullPolicy: {{ .Values.image.pullPolicy }}
@@ -150,18 +147,14 @@ spec:
         - name: host-sys
           hostPath:
             path: /sys
-        - name: host-mount
+        - name: host-run
           hostPath:
-            path: /run/mount
+            path: /run
             type: Directory
         - name: lib-modules
           hostPath:
             path: /lib/modules
             type: Directory
-        - name: iscsiadm
-          hostPath:
-            path: /sbin/iscsiadm
-            type: File
         - name: iscsi-etc
           hostPath:
             path: /etc/iscsi
