--- a/hack/Dockerfile.openeuler
+++ b/hack/Dockerfile.openeuler
@@ -2,7 +2,7 @@ FROM openeuler/openeuler:22.03
 
 RUN sed -i "s/gpgcheck=1/gpgcheck=0/g" /etc/yum.conf && \
     sed -i "s/gpgcheck=1/gpgcheck=0/g" /etc/yum.repos.d/openEuler.repo && \
-    yum -y install qemu-img open-isns kmod-libs open-iscsi && \
+    yum -y install qemu-img open-isns kmod-libs open-iscsi sg3_utils&& \
     yum clean all
 
 ADD /bin/extrootfs /usr/bin/
